<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_main</name>
  <version>0.1.0</version>
  <description>launch to robot_2(2024_winter)</description>
  <maintainer email="yukitoharuto@outlook.jp">mituba3328</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>